src/test/deca/avecObjet/valid/override_call_child_impl copy.deca
// Description :
//    Appel d'une méthode redéfinie dans une sous-classe.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    int f() {
        return 2;
    }
}

{
    B b = new B();
    println(b.f());
}

