src/test/deca/avecObjet/invalid/return_type_mismatch_int_float.deca
// Description :
//    Retour d'un float dans une méthode retournant int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return 1.2;
    }
}

{
}

